--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 !.vscode/extensions.json
 *.code-workspace
 web/flaskapp/app/config/serviceAccountKey.json
+web/flaskapp/app/config/privateKey.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
